# galette

./: .gitignore  Cargo.toml  LICENSE  README.md  run_tests.sh
baseline/: GAL16V8_combinatorial.jed  GAL16V8_complex_feedback.chp  GAL16V8_complex_feedback.jed  GAL16V8_complex_in.chp  GAL16V8_complex_in.jed  GAL16V8_complex_in.pin  GAL16V8_mode2_feedback.fus  GAL16V8_mode2_feedback.jed  GAL16V8_mode2_in.fus  GAL16V8_mode2_in.jed  GAL16V8_reg.jed  GAL16V8_reg.pin  GAL16V8_tri.chp  GAL16V8_tri.fus  GAL16V8_tri.jed  GAL16V8_tri.pin  GAL20RA10_combinatorial.fus  GAL20RA10_combinatorial.jed  GAL20RA10_reg.jed  GAL20RA10_rst.chp  GAL20RA10_rst.jed  GAL20RA10_tri.fus  GAL20RA10_tri.jed  GAL20RA10_tri.pin  GAL20V8_combinatorial.chp  GAL20V8_combinatorial.fus  GAL20V8_combinatorial.jed  GAL20V8_combinatorial.pin  GAL20V8_complex.jed  GAL20V8_mode2.chp  GAL20V8_mode2.fus  GAL20V8_mode2.jed  GAL20V8_mode2_feedback.chp  GAL20V8_mode2_feedback.jed  GAL20V8_mode2_feedback.pin  GAL20V8_reg.fus  GAL20V8_reg.jed  GAL20V8_reg.pin  GAL20V8_tri.jed  GAL22V10_arsp.fus  (+20 more)
baseline_success/: GAL16V8_combinatorial.chp  GAL16V8_reg.fus  GAL16V8_tri.jed  GAL20RA10_combinatorial.pin  GAL20RA10_reg.fus  GAL20RA10_reg.jed  GAL20RA10_tri.chp  GAL20V8_complex_feedback.fus  GAL20V8_tri.fus  GAL20V8_tri.jed  GAL20V8_tri.pin  gnd.pin  negpin.jed  negpin.pin
src/: blueprint.rs  chips.rs  errors.rs  gal.rs  gal_builder.rs  interop.rs  jedec.rs  jedec_writer.rs  lib.rs  main.rs  olmc.rs  parser.rs  writer.rs
testcases/: GAL16V8_badname.pld  GAL16V8_complex_12.pld  GAL16V8_complex_feedback.pld  arspok.pld  (+61 more)
(+92 files in other folders)
